--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -5,7 +5,7 @@ body {
 
 #homepage {
 
-    background-image: url("./Pozadí homepage.svg");
+    background-image: url("./Pozadí homepage.png");
     height: 955px;
     width: 1920px;
 }
