--- a/Homepage/styles/style.css
+++ b/Homepage/styles/style.css
@@ -5,7 +5,7 @@ body {
 
 #homepage {
 
-    background-image: url("./background_homepage.png");
+    background-image: url("./styles/background_homepage.png");
     height: 955px;
     width: 1920px;
 }
