--- a/ip_adresace/styles/header.css
+++ b/ip_adresace/styles/header.css
@@ -13,7 +13,6 @@
 #headerLogo {
 
     margin-right: 385px;
-    
     color: #000;
     font-family: Urbanist;
     font-size: 56px;
@@ -31,7 +30,6 @@ span {
 .headerLinks:nth-child(2) {
 
     margin-right: 43px;
-
     color: #FFF;
     font-family: Urbanist;
     font-size: 15px;
@@ -44,7 +42,6 @@ span {
 .headerLinks:nth-child(3) {
     
     margin-right: 43px;
-
     color: #FFF;
     font-family: Urbanist;
     font-size: 15px;
@@ -57,7 +54,6 @@ span {
 .headerLinks:nth-child(4) {
 
     margin-right: 69px;
-
     color: #FFF;
     font-family: Urbanist;
     font-size: 15px;
@@ -74,7 +70,7 @@ span {
     justify-content: center;
     width: 130px;
     height: 44px;
-
+    -webkit-text-stroke: #FFF;
     color: #FFF;
     font-family: Urbanist;
     font-size: 15px;
@@ -84,6 +80,6 @@ span {
     letter-spacing: 0.5px; 
 
     border-radius: 5px;
-    border: 2px solid #FFF;
+border: 2px solid #FFF;
     margin-right: 66px;
 }
