--- a/Homepage/styles/style.css
+++ b/Homepage/styles/style.css
@@ -57,8 +57,8 @@ a:visited {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 200px;
     height: 50px;
+    width: 200px;
     border-radius: 5px;
 
     background-color: #013A8F;
@@ -73,5 +73,41 @@ a:visited {
     letter-spacing: 0.5px; 
 
     margin-top: 27px;
+}
+
+#sections {
+
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 112px;
+    
+    
+}
+
+#firstSection {
+
+    background-color: #132E65;
+    border-radius: 20px;
+    width: 319px;
+    height: 330px;
+    
+}
+
+#secondSection {
+
+    background-color: #132E65;
+    border-radius: 20px;
+    width: 319px;
+    height: 330px;
+}
+
+#thirdSection {
+
+    background-color: #132E65;
+    border-radius: 20px;
+    width: 319px;
+    height: 330px;
 }
 
