--- a/Homepage/styles/footer.css
+++ b/Homepage/styles/footer.css
@@ -6,11 +6,12 @@
     position: relative;
     left: 370px;
     right: 370px;
+    top: 276px;
 
     color: #132e65;
     border-top: 2px solid #132e65;
     width: 1180px;
-    height: 186px;
+    height: 195px;
 
 }
 
@@ -75,6 +76,7 @@
     height: 2px;
     background-color: #132e65;
     width: 500px;
+    position: relative;
 }
 
 #footerBottomDate {
