--- a/Homepage/styles/footer.css
+++ b/Homepage/styles/footer.css
@@ -1,31 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Flow+Circular&family=Urbanist:wght@300&display=swap');
 
 
+
+#footerMain {
+
+    display: flex;
+    justify-content: center;
+    margin-top: 81px;
+
+    border: 2px solid red;
+}
+
 #footer {
     
-    position: relative;
-    left: 370px;
-    right: 370px;
-    top: 276px;
+    display: flex;
 
+    justify-content: space-between;
     color: #132e65;
     border-top: 2px solid #132e65;
     width: 1180px;
-    height: 195px;
+    height: 178px;
 
 }
 
 #footerLogo {
 
     position: relative;
+    bottom: 0;
     top: 38px;
+    height: 70px;
 
     color: #000;
     font-family: Urbanist;
     font-size: 56px;
     font-style: normal;
     font-weight: 300;
-    line-height: light;
+    line-height: normal;
     letter-spacing: 2px; 
 }
 
@@ -35,6 +45,8 @@
     flex-direction: column;
     align-items: center;
     gap: 18px;
+    margin-left: -142px;
+    margin-top: 48px;
 }
 
 .footerLink {
@@ -48,20 +60,13 @@
     letter-spacing: 0.5px;
 }
 
-#footerImages {
+
+#footerBottomsMain {
 
     display: flex;
-    gap: 20px;
-    position: relative;
-    left: 1030px;
-    width: 125px;
+    justify-content: center;
 }
 
-#footerImage2 {
-    
-    position: relative;
-    bottom: 6px;
-}
 
 #footerBottoms {
 
@@ -76,7 +81,7 @@
     height: 2px;
     background-color: #132e65;
     width: 500px;
-    position: relative;
+    
 }
 
 #footerBottomDate {
