--- a/Homepage/styles/footer.css
+++ b/Homepage/styles/footer.css
@@ -59,6 +59,14 @@
 }
 
 
+#footerImages {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
 
 #footerBottomsMain {
 
