--- a/Homepage/styles/header.css
+++ b/Homepage/styles/header.css
@@ -11,6 +11,8 @@
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    gap: 385px;
     top: 59px;
     left: 370px;
     max-width: fit-content;
@@ -18,7 +20,7 @@
 
 #headerLogo {
 
-    margin-right: 385px;
+    
 
     color: #000;
     font-family: Urbanist;
@@ -34,14 +36,46 @@ span {
     margin-left: 9px;
 }
 
+#navbarLinks {
+
+    display: flex;
+    justify-content: space-between;
+    gap: 69px;
+    align-items: center;
+}
+
+
+#navbarMainLinks{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 43px;
+    width: 229px;
+}
+
 .headerLinks:hover {
 
     border-bottom: 1px solid #FFF;
 }
 
-.headerLinks:nth-child(2) {
 
-    margin-right: 43px;
+.headerLinks:nth-child(1) {
+
+    
+
+    color: #FFF;
+    font-family: Urbanist;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.5px; 
+}
+
+.headerLinks:nth-child(2) {
+    
+    
 
     color: #FFF;
     font-family: Urbanist;
@@ -53,21 +87,8 @@ span {
 }
 
 .headerLinks:nth-child(3) {
+
     
-    margin-right: 43px;
-
-    color: #FFF;
-    font-family: Urbanist;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.5px; 
-}
-
-.headerLinks:nth-child(4) {
-
-    margin-right: 69px;
 
     color: #FFF;
     font-family: Urbanist;
@@ -96,5 +117,5 @@ span {
 
     border-radius: 5px;
     border: 2px solid #FFF;
-    margin-right: 66px;
+    
 }
