--- a/Homepage/styles/footer.css
+++ b/Homepage/styles/footer.css
@@ -43,7 +43,7 @@
     flex-direction: column;
     align-items: center;
     gap: 18px;
-    margin-left: -142px;
+    margin-left: -127px;
     margin-top: 48px;
 }
 
@@ -72,11 +72,11 @@
     gap: 20px;
 }
 
-
 #footerBottomsMain {
 
     display: flex;
     justify-content: center;
+    width: auto;
 }
 
 
