--- a/Homepage/styles/section_animation.css
+++ b/Homepage/styles/section_animation.css
@@ -7,15 +7,26 @@
 }
 
 @keyframes sectionOnHover {
-    
-    0% {
-
-        transform: translateY(0);   
-    }
 
     100% {
 
-        filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
         transform: translateY(-15px);
+        transform: scale(1.1,1.1);
+    }
+}
+
+
+.footerImage:hover {
+
+    animation-iteration-count: 1;
+    animation: imagesOnHover 0.1s linear forwards;
+}
+
+@keyframes imagesOnHover {
+    
+    100% {
+
+        transform: scale(1.1,1.1);
     }
 }
