--- a/Homepage/styles/style.css
+++ b/Homepage/styles/style.css
@@ -16,7 +16,7 @@ body {
     margin-top: 0;
     background-image: url("../images/background_homepage.png");
     height: 955px;
-    width: 1920px;
+    width: auto;
 
 }
 
