--- a/Homepage/styles/style.css
+++ b/Homepage/styles/style.css
@@ -105,6 +105,22 @@ body {
     gap: 112px; 
 }
 
+.sectionAnimation:hover {
+
+    animation-iteration-count: 1;
+    animation: sectionOnHover 0.1s linear forwards;
+}
+
+@keyframes sectionOnHover {
+
+    100% {
+
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        translate: 0 -15px;
+        scale: 1.1 1.1;
+    }
+}
+
 .sectionTitle {
 
     margin-top: 31px;
