added animation of a sections

--- a/vyber_uloh/styles/style.css
+++ b/vyber_uloh/styles/style.css
@@ -84,6 +84,23 @@ body {
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+.sections:hover {
+
+    animation-iteration-count: 1;
+    animation: sectionOnHover 0.1s linear forwards;
+}
+
+@keyframes sectionOnHover {
+
+    100% {
+
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        translate: 0 -15px;
+        scale: 1.1 1.1;
+    }
+}
+
+
 .section-header {
 
     margin-top: 51px;
