--- a/ip_adresace/styles/header.css
+++ b/ip_adresace/styles/header.css
@@ -1,18 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Flow+Circular&family=Urbanist:wght@300&display=swap');
 
+
+#headerLogo:visited {
+
+    color: #000;
+}
+
 #header {
 
-    position: relative;
     display: flex;
     align-items: center;
-    top: 59px;
-    left: 370px;
+    justify-content: space-between;
+    gap: 385px;
+    margin-top: 59px;
+    margin-left: 370px;
     max-width: fit-content;
+
 }
 
 #headerLogo {
 
-    margin-right: 385px;
     color: #000;
     font-family: Urbanist;
     font-size: 56px;
@@ -27,9 +34,37 @@ span {
     margin-left: 9px;
 }
 
-.headerLinks:nth-child(2) {
+#navbarLinks {
 
-    margin-right: 43px;
+    display: flex;
+    justify-content: space-between;
+    gap: 69px;
+    align-items: center;
+}
+
+
+#navbarMainLinks{
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 43px;
+    width: 229px;
+}
+
+.headerLinks:nth-child(1) {
+
+    color: #FFF;
+    font-family: Urbanist;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.5px; 
+}
+
+.headerLinks:nth-child(2) {
+    
     color: #FFF;
     font-family: Urbanist;
     font-size: 15px;
@@ -40,20 +75,7 @@ span {
 }
 
 .headerLinks:nth-child(3) {
-    
-    margin-right: 43px;
-    color: #FFF;
-    font-family: Urbanist;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    letter-spacing: 0.5px; 
-}
 
-.headerLinks:nth-child(4) {
-
-    margin-right: 69px;
     color: #FFF;
     font-family: Urbanist;
     font-size: 15px;
@@ -70,7 +92,7 @@ span {
     justify-content: center;
     width: 130px;
     height: 44px;
-    -webkit-text-stroke: #FFF;
+
     color: #FFF;
     font-family: Urbanist;
     font-size: 15px;
@@ -80,6 +102,10 @@ span {
     letter-spacing: 0.5px; 
 
     border-radius: 5px;
-border: 2px solid #FFF;
-    margin-right: 66px;
+    border: 2px solid #FFF;
+}
+
+#headerProject:hover {
+
+    background: rgba(0, 0, 0, 0.15);
 }
