--- a/Homepage/styles/style.css
+++ b/Homepage/styles/style.css
@@ -6,13 +6,14 @@ body {
 
     margin: 0;
     width: auto;
-    
+    background-image: url("../images/background_homepage.png");
+    background-repeat: no-repeat;
 }
 
 #homepage {
 
     margin-top: 0;
-    background-image: url("../images/background_homepage.png");
+    
     height: 955px;
     width: auto;
 }
