--- a/vyber_uloh/styles/style.css
+++ b/vyber_uloh/styles/style.css
@@ -4,6 +4,7 @@ body {
 
     margin: 0;
     background-image: url("../images/background_task_selection.svg");
+    background-repeat: no-repeat;
 }
 
 #homepage {
