--- a/Homepage/styles/style.css
+++ b/Homepage/styles/style.css
@@ -71,10 +71,14 @@ body {
     letter-spacing: 0.5px; 
 
     margin-top: 27px;
+
+    transition: scale 0.2s, translate 0.2s;
 }
 
 #titleButton:hover {
 
+    scale: 1.1 1.1;
+    translate: 10px 0;
     background-color: rgb(22, 87, 185);
 }
 
@@ -103,13 +107,32 @@ body {
     gap: 112px; 
 }
 
-.sectionAnimation:hover {
+.section {
 
-    animation-iteration-count: 1;
-    animation: sectionOnHover 0.1s linear forwards;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    width: 319px;
+    height: 330px;
+    
+
+    background-color: #132E65;
 }
 
-@keyframes sectionOnHover {
+.sectionAnimation {
+
+    transition: scale 0.2s;
+}
+
+.sectionAnimation:hover {
+
+    /*animation-iteration-count: 1;
+    animation: sectionOnHover 0.1s linear forwards;*/
+    scale: 1.1 1.1;
+}
+
+/*@keyframes sectionOnHover {
 
     100% {
 
@@ -117,7 +140,7 @@ body {
         translate: 0 -15px;
         scale: 1.1 1.1;
     }
-}
+}*/
 
 .sectionTitle {
 
@@ -170,40 +193,17 @@ body {
     font-weight: 600;
     line-height: normal;
     letter-spacing: 0.5px; 
+
+    transition: scale 0.2s;
 }
 
 .sectionButton:hover {
 
+    scale: 1.1 1.1;
     background-color: rgb(22, 87, 185);
 }
 
-#firstSection {
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 20px;
-    width: 319px;
-    height: 330px;
-    
-
-    background-color: #132E65;
-    
-}
-
-
-#secondSection {
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 20px;
-    width: 319px;
-    height: 330px;
-
-    background-color: #132E65;
-    
-}
 
 #secondSectionContent {
 
