--- a/kalkulacka/styles/style.css
+++ b/kalkulacka/styles/style.css
@@ -14,7 +14,7 @@ body {
     gap: 318px;
     margin-left: 370px;
     margin-right: 370px;
-    margin-top: 176px;
+    margin-top: 250px;
 }
 
 #calculatorSection {
@@ -121,11 +121,14 @@ input::placeholder {
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
     outline: none;
     border: 1px solid #013A8F;
+
+    transition: scale 0.2s;
 }
 
 #calculateButton:hover {
 
     background-color: rgb(22, 87, 185);
+    scale: 1.1 1.1;
 }
 
 #idkSection {
