--- a/ip_adresace/styles/style.css
+++ b/ip_adresace/styles/style.css
@@ -14,7 +14,7 @@ body {
     gap: 318px;
     margin-left: 370px;
     margin-right: 370px;
-    margin-top: 111px;
+    margin-top: 200px;
 }
 
 #task-section {
@@ -144,11 +144,14 @@ input::placeholder {
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
     outline: none;
     border: 1px solid #013A8F;
+
+    transition: scale 0.2s;
 }
 
 #task-section-button-text:hover {
 
     background-color: rgb(22, 87, 185);
+    scale: 1.1 1.1;
 }
 
 #idk-section {
