--- a/Programy/templates/Homepage/index.html
+++ b/Programy/templates/Homepage/index.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subnetron</title>
-    <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="icon" href="./images/logo_new.svg">
+    <link rel="stylesheet" href="./static/Homepage/styles/header.css">
+    <link rel="stylesheet" href="./static/Homepage/styles/style.css">
+    <link rel="stylesheet" href="./static/Homepage/styles/footer.css">
+    <link rel="icon" href="./static/Homepage/images/logo_new.svg">
 </head>
 
 <body>
     <div id="homepage">
         <nav id="header">
-            <a id="headerLogo" href="../Homepage/" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
+            <a id="headerLogo" href="../Homepage/" style="text-decoration: none;"><img src="./static/Homepage/images/logo_new.svg" height="50px"><span>works</span></a>
             <div id="navbarLinks">
                 <div id="navbarMainLinks">
                     <a class="headerLinks" href="" target="_self" style="text-decoration: none;">Blog</a>
@@ -22,13 +22,13 @@
                     <a class="headerLinks" href="../kalkulacka/" target="_self" style="text-decoration: none;">Kalkulačka</a>
                 </div>
                 <a id="headerProject" href="#aboutProjectSection" style="text-decoration: none;">O projektu</a>
-                <img id="headerLanguage" src="./images/czech_flag.png">
+                <img id="headerLanguage" src="./static/Homepage/images/czech_flag.png">
             </div>
         </nav>
         <div id="title">
             <div id="slogan">Trénuj, uč se<br>
                 a ušetři čas!!</div>
-            <div id="subtitle">Chceš se více dozvědět o světě<br>
+            <div id="subtitle">Chceš se dozvědět více o světě<br>
                 počítačových sítí, ale nevíš kde?</div>
             <a id="titleButton" href="#homepageMain" style="text-decoration: none;">Zjistit více</a>
         </div>
@@ -91,15 +91,15 @@
     </div>
     <div id="footerMain">
         <div id="footer">
-            <a id="footerLogo" href="" style="text-decoration: none;"><img src="./images/logo_new.svg" height="50px"><span>works</span></a>
+            <a id="footerLogo" href="" style="text-decoration: none;"><img src="./static/Homepage/images/logo_new.svg" height="50px"><span>works</span></a>
             <div id="footerLinks">
                 <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Blog</a>
                 <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Úlohy</a>
                 <a class="footerLink" target="_blank" href="" style="text-decoration: none;">Kalkulačka</a>
             </div>
             <div id="footerImages">
-                <a class="footerImage" href="" style="text-decoration: none;"><img src="./images/discord-logo.svg" height="50px"></a>
-                <a class="footerImage" href="" style="text-decoration: none;"><img src="./images/github-logo.svg" height="60px"></a>
+                <a class="footerImage" href="" style="text-decoration: none;"><img src="./static/Homepage/images/discord-logo.svg" height="50px"></a>
+                <a class="footerImage" href="" style="text-decoration: none;"><img src="./static/Homepage/images/github-logo.svg" height="60px"></a>
             </div> 
         </div>
     </div>
